<resources>
    <string name="app_name">Todoc</string>

    <string name="label_action_filter">Filter</string>
    <string name="label_action_order">Order</string>

    <string name="sort_alphabetical">A -&gt; Z</string>
    <string name="sort_alphabetical_invert">Z -&gt; A</string>
    <string name="sort_oldest_first">Les plus anciens d’abord</string>
    <string name="sort_recent_first">Les plus récents d’abord</string>

    <string name="add_task">Ajouter une tâche</string>
    <string name="add">Ajouter</string>

    <string name="no_task">Aucune tâche à traiter</string>

    <string name="task_name_hint">Nom de la tâche</string>

    <string name="empty_task_name">Le nom de la tâche doit être renseigné</string>
    <string name="projet_tartampion">Projet Tartampion</string>
    <string name="projet_lucidia">Projet Lucidia</string>
    <string name="projet_circus">Projet Circus</string>
    <string name="allProjects">Tous les projets</string>
    <string name="tartampion">Tartampion</string>
    <string name="lucida">Lucida</string>
    <string name="circus">Circus</string>
    <string name="all_projects">All Projects</string>
    <string name="lucidia">Lucidia</string>
    <string name="alibaba">Alibaba</string>
</resources>
